ADD_TORCH_LUA2EXE(torch-exe "${CMAKE_CURRENT_SOURCE_DIR}/torch-exe.lua")
SET_TARGET_PROPERTIES(torch-exe PROPERTIES OUTPUT_NAME "torch")

INSTALL(
  TARGETS torch-exe
  RUNTIME DESTINATION "${Torch_INSTALL_BIN_SUBDIR}"
  LIBRARY DESTINATION "${Torch_INSTALL_LIB_SUBDIR}"
  ARCHIVE DESTINATION "${Torch_INSTALL_LIB_SUBDIR}")

INSTALL(
  FILES "torch-env.lua"
  DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}")
