FIND_PACKAGE(Wget)
IF(NOT WGET_FOUND)
	FIND_PACKAGE(Curl)
ENDIF(NOT WGET_FOUND)
FIND_PACKAGE(Git)

IF((WGET_FOUND OR CURL_FOUND) AND GIT_FOUND)

	CONFIGURE_FILE(torch-pkg.lua.in "${CMAKE_CURRENT_BINARY_DIR}/torch-pkg.lua")
	ADD_TORCH_LUA2EXE(torch-pkg "${CMAKE_CURRENT_BINARY_DIR}/torch-pkg.lua")

        INSTALL(TARGETS torch-pkg
          RUNTIME DESTINATION "${Torch_INSTALL_BIN_SUBDIR}"
          LIBRARY DESTINATION "${Torch_INSTALL_LIB_SUBDIR}"
          ARCHIVE DESTINATION "${Torch_INSTALL_LIB_SUBDIR}")

ELSE((WGET_FOUND OR CURL_FOUND) AND GIT_FOUND)

	MESSAGE(FATAL_ERROR "Downloader (wget/curl or git) not found")

ENDIF((WGET_FOUND OR CURL_FOUND) AND GIT_FOUND)
