SET( CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH} )

FIND_PACKAGE(Wget)
FIND_PACKAGE(CURL)
FIND_PACKAGE(Git)

IF (CURL_FOUND)
   SET(CURL_EXECUTABLE "${CURL_INCLUDE_DIRS}/../bin/curl")
ENDIF (CURL_FOUND)

IF((WGET_FOUND OR CURL_FOUND) AND GIT_FOUND)

	CONFIGURE_FILE(torch-pkg.lua.in "${CMAKE_CURRENT_BINARY_DIR}/torch-pkg.lua")
	ADD_TORCH_LUA2EXE(torch-pkg "${CMAKE_CURRENT_BINARY_DIR}/torch-pkg.lua")

        INSTALL(TARGETS torch-pkg
          RUNTIME DESTINATION "${Torch_INSTALL_BIN_SUBDIR}"
          LIBRARY DESTINATION "${Torch_INSTALL_LIB_SUBDIR}"
          ARCHIVE DESTINATION "${Torch_INSTALL_LIB_SUBDIR}")

ELSE((WGET_FOUND OR CURL_FOUND) AND GIT_FOUND)

	MESSAGE(FATAL_ERROR "Downloader (wget/curl or git) not found")

ENDIF((WGET_FOUND OR CURL_FOUND) AND GIT_FOUND)
