CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)
FIND_PACKAGE(Torch REQUIRED)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")

FIND_PACKAGE(CUDA 4.0)

IF (CUDA_FOUND)

  LIST(APPEND CUDA_NVCC_FLAGS "-arch=sm_20;--use_fast_math")

  # bug on Apple
  IF(APPLE)
    LINK_DIRECTORIES("/usr/local/cuda/lib/")
  ENDIF(APPLE)

  INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})
  INCLUDE_DIRECTORIES(${Torch_SOURCE_INCLUDES})
  INCLUDE_DIRECTORIES("lib/THC")

  # libraries
  ADD_SUBDIRECTORY(lib)

  # packages
  ADD_SUBDIRECTORY(pkg)
  
ELSE (CUDA_FOUND)

  MESSAGE(STATUS "Disabling CUDA (CUDA 4.0 required, and not found)")
  MESSAGE(STATUS "If CUDA 4.0 is installed, then specify CUDA_TOOLKIT_ROOT_DIR")
  
ENDIF (CUDA_FOUND)
