CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)
FIND_PACKAGE(Torch REQUIRED)

FIND_PACKAGE(OpenMP)

IF(OPENMP_FOUND)
  MESSAGE(STATUS "OpenMP Found with compiler flag : ${OpenMP_C_FLAGS}")
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")

  INCLUDE_DIRECTORIES(${Torch_SOURCE_INCLUDES})
  INCLUDE_DIRECTORIES("lib/THOmp")

  ADD_SUBDIRECTORY(lib)
  ADD_SUBDIRECTORY(pkg)

ENDIF(OPENMP_FOUND)
