INCLUDE_DIRECTORIES("${Torch_SOURCE_DIR}/libraries/TH")
#INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})

SET(src 
  THCGeneral.c THCStorage.c)

SET(src ${src})

CUDA_ADD_LIBRARY(THC SHARED ${src})

#ADD_LIBRARY(THC SHARED ${src})
TARGET_LINK_LIBRARIES(THC TH)

# FIND_PACKAGE(BLAS)

# IF(BLAS_FOUND)
#   ADD_DEFINITIONS(-DUSE_LAPACK)
# #  INCLUDE_DIRECTORIES(${CBLAS_INCLUDE_DIR})
#   TARGET_LINK_LIBRARIES(THC ${BLAS_LIBRARIES})
# ENDIF(BLAS_FOUND)

INSTALL(TARGETS THC
          RUNTIME DESTINATION "${Torch_INSTALL_BIN_SUBDIR}"
          LIBRARY DESTINATION "${Torch_INSTALL_LIB_SUBDIR}"
          ARCHIVE DESTINATION "${Torch_INSTALL_LIB_SUBDIR}")

